Update deployment Image to version 3

--- a/emart-manifests/client/client.yaml
+++ b/emart-manifests/client/client.yaml
@@ -19,7 +19,7 @@ spec:
       - name: dev-aws-ecr-us-east-1   # change 
       containers:
       - name: client
-        image: 532739883212.dkr.ecr.us-west-2.amazonaws.com/client:v1  #CHANGE
+        image: 532739883212.dkr.ecr.us-west-2.amazonaws.com/client:3  #CHANGE
         imagePullPolicy: Always
         ports:
         - containerPort: 4200
